--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
+aiohttp==3.8.3
+aiosignal==1.3.1
 async-timeout==4.0.2
-attrs==22.1.0
-Babel==2.10.3
+attrs==22.2.0
+Babel==2.11.0
 beautifulsoup4==4.11.1
-certifi==2022.6.15.1
+certifi==2022.12.7
 charset-normalizer==2.1.1
-discord.py==2.0.1
-frozenlist==1.3.1
-idna==3.3
-multidict==6.0.2
+colorclass==2.2.2
+discord.py==2.1.0
+docopt==0.6.2
+frozenlist==1.3.3
+idna==3.4
+multidict==6.0.4
+packaging==23.0
+pip-upgrader==1.4.15
 python-dotenv==0.21.0
 pytz==2022.2.1
 requests==2.28.1
 soupsieve==2.3.2.post1
-urllib3==1.26.12
-yarl==1.8.1
+terminaltables==3.1.10
+urllib3==1.26.13
+yarl==1.8.2
